--- a/src/scss/_event-alert.scss
+++ b/src/scss/_event-alert.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  font-size: 6rem;
+  font-size: 5.25rem;
   line-height: 1.2em;
 
   #event-alert-icon {
